z-index fixed

--- a/src/styles/components/NavBar/_NavBar.scss
+++ b/src/styles/components/NavBar/_NavBar.scss
@@ -50,7 +50,7 @@
 		display: flex;
 		justify-content: center;
 		position: absolute;
-		z-index: 2;
+		z-index: 4;
 		top: 100%;
 		width: 100%;
 		padding: 0 0 20em 0;
