--- a/src/styles/components/NavBar/_UserMenu.scss
+++ b/src/styles/components/NavBar/_UserMenu.scss
@@ -4,7 +4,7 @@
 	position: absolute;
 	right: 0;
 	top: 100%;
-	z-index: 4;
+	z-index: 5;
 	visibility: hidden;
 
 	.UserMenu {
